--- a/src/templates/access.html
+++ b/src/templates/access.html
@@ -6,13 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Webpack Basic</h1>
+    <h1>Access Page</h1>
     <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./access">Access</a></li>
     </ul>
-    <h2>PDFリンク</h2>
-    <div><a href="./pdf/program.pdf">リンクはこちら</a></div>
+    <div><a href="../pdf/program.pdf">リンクはこちら</a></div>
     <div><img src="../images/thumbnail/thumbnail-test.jpg" alt=""></div>
     <div><img src="../images/icon/icon-test.png" alt=""></div>
 </body>
